# tap-powerbi-metadata

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: cicd.yml
.secrets/: .gitignore  config.json.template
tap_powerbi_metadata/: streams.py  tap.py
tap_powerbi_metadata/tests/: test_standard_tests.py
